--- a/clasificador_noticias.ipynb
+++ b/clasificador_noticias.ipynb
@@ -25,7 +25,7 @@
     "2. Análisis de tópicos de las noticias en linea temporal\n",
     "\n",
     "**Clasificador**\n",
-    "Lo primero que hacemos es limpiar los datos, tokennizar y lematizar para trasnformar el texto en las palabras que introduciremos al modelo. En este caso una red neuronal que suelo utilizar para este tipo de problemas, me ayuda a haya buenos resultados.\n",
+    "Lo primero que hacemos es limpiar los datos, tokenizar y lematizar para trasnformar el texto en las palabras que introduciremos al modelo. En este caso una red neuronal que suelo utilizar para este tipo de problemas, me ayuda a hayar buenos resultados.\n",
     "\n",
     "**Analisis de tópicos**\n",
     "Para analizar los tópicos utilizamos los mismos datos, partiendo de un conjunto de texto ya procesado y tokenizado aplicamos un modelo BTM para hayar los BITERMS y agrupar por cada uno de los tópicos."
